[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipia"
version = "1.0.1"
description = "Official Python SDK for the Clipia public API (image & video generation, fal-style queue)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Clipia", email = "support@clipia.ai" }]
keywords = [
  "clipia",
  "ai",
  "image-generation",
  "video-generation",
  "text-to-image",
  "text-to-video",
  "image-to-video",
  "generative-ai",
  "api",
  "sdk",
  "mcp",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.urls]
Homepage = "https://clipia.ai"
Documentation = "https://api.clipia.ai"
Source = "https://github.com/clipia-ai/clipia-python"
Issues = "https://github.com/clipia-ai/clipia-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["clipia"]

[tool.hatch.build.targets.sdist]
include = [
  "/clipia",
  "/tests",
  "/README.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
